Fix spacing between wait times and top border [WEB-2140]

--- a/frontend/scss/molecules/_m-link-list.scss
+++ b/frontend/scss/molecules/_m-link-list.scss
@@ -211,3 +211,7 @@ a.m-link-list__trigger.f-secondary {
     margin-right: 8px;
   }
 }
+
+.m-link-list__trigger--wait-time.f-secondary {
+  margin-top: 0;
+}
